màj responsive avec ajout de la version mobile + correction du padding sur certains éléments

--- a/accueil.css
+++ b/accueil.css
@@ -24,7 +24,9 @@
 /* Barre de navigation */
 #NavigationPage {
     background-color: white; 
-    padding: 0 40px; 
+    /* padding: 0 40px;  */
+    margin-right: 50px;
+    margin-left: 50px;
   }
   
   nav ul {
@@ -37,6 +39,7 @@
   nav ul li {
     flex: 1; 
     margin: 0;
+    
   }
   
   nav ul li:first-child {
@@ -53,7 +56,7 @@
     background-color: white; 
   }
   
- 
+ /* Image sport avec texte */
   nav ul li a:hover {
     background-color: var(--primaryColor); 
   }
@@ -61,7 +64,90 @@
   #PrincipalInformation article:first-child {
     display: flex;
     flex-direction: row-reverse;
+    max-width: 100%;
   }
   #PrincipalInformation div {
     margin-top: 100px;
   }
+
+  #PrincipalInformation article:nth-child(2) {
+    display: flex;
+  }
+  #PrincipalInformation article:nth-of-type(2) div:nth-of-type(2) {
+    margin-top: 100px;
+  }
+
+
+   /* responsive */
+
+   @media (max-width: 900px ) {
+
+
+    .container h1 {
+        width: 30%;
+        font-size: 2rem;
+        margin-bottom: 200px;
+        margin: auto;
+        font: x-large;
+    }
+    .container img {
+        width: 55%;
+        margin-top: 50px;
+        margin-bottom:50px;
+        margin: auto;
+    }
+
+    article img:first-of-type {
+       margin: auto;
+       max-width: 50%;
+    }
+    article div:first-of-type {
+        text-align: justify;
+        margin-top: 25px;
+        margin-right: 25px;
+    }
+    article div:nth-of-type(2) {
+        text-align: justify;
+        margin-top: 25px;
+        margin-right: 25px;
+    }
+    article img:nth-of-type(2) {
+        margin: auto;
+        max-width: 50%;
+    }
+    nav ul li a {
+        padding: 10px;
+        font-size: smaller;
+    }
+    #NavigationPage{
+        margin : 0 25px;
+        padding: 0 15px;
+    }
+   }
+
+   @media (max-width:500px) {
+   .container img {
+   content: url('image/WhatsApp_Image_2023-11-24_at_10.49 5.png')
+  }
+  .container {
+    padding: 50 0px;
+  }
+  .container h1 {
+    position: absolute;
+    width: 80%;
+  }
+  #navigationPage {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
+  nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+ 
+  }
+  nav ul li a {
+    padding: 30px 0px;
+  }
+   }
